--- a/.github/workflows/fet.yml
+++ b/.github/workflows/fet.yml
@@ -16,4 +16,4 @@ jobs:
     - uses: julia-actions/setup-julia@v1
       with:
         version: 1.7-nightly
-    - run: make && julia $pwd/test/unit_test.jl
+    - run: make && julia ./test/unit_test.jl
