--- a/.github/workflows/fet.yml
+++ b/.github/workflows/fet.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1.0', '1.2.0', '1.7-nightly']
+        julia-version: ['1.0', '^1.3.0-0', 'nightly']
         os: [ubuntu-latest, macOS-latest]
     
     steps:
