--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "fet"
+name = "FishersExactTest"
 uuid = "bb7b2d4f-b953-405a-be8a-3427bcf465e4"
 authors = ["MiyamizuMitsuha"]
 version = "0.1.0"
