--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,15 @@
 name = "FishersExactTest"
 uuid = "bb7b2d4f-b953-405a-be8a-3427bcf465e4"
 authors = ["MiyamizuMitsuha"]
-version = "0.1.0"
+version = "1.0.0"
 
 [deps]
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[compat]
+SpecialFunctions = "2.1.7"
+julia = "1.3, 1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
